--- a/package.json
+++ b/package.json
@@ -1,58 +1,65 @@
 {
   "name": "platzibadge-react",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.19.0"
+  },
   "description": "",
   "main": "index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "scripts": {
-    "clean": "rm dist/",
+    "clean": "rm -r dist",
     "build:dev": "webpack serve --config ./webpack.dev.config.js",
     "build:dll": "webpack --config ./webpack.dll.config.js --mode production",
-    "build": "webpack --config ./webpack.config.js --mode production",
-    "build:all": "npm run build:dll ; npm run build"
+    "build:p": "webpack --config ./webpack.config.js --mode production",
+    "build:all": "npm run build:dll ; npm run build:p",
+    "serve": "serve ./dist"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "postcss": "^8.1.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
     "react-router": "^5.2.0",
-    "tailwindcss": "^1.9.6"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.9",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.12.1",
-    "@babel/preset-env": "7.12.7",
-    "@babel/preset-react": "7.12.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
     "@babel/runtime": "^7.12.5",
     "@hot-loader/react-dom": "^17.0.0+4.13.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^10.0.2",
-    "babel-loader": "8.2.2",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "5.0.1",
+    "css-loader": "^5.0.1",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
-    "faker": "^5.1.0",
-    "file-loader": "6.2.0",
-    "html-webpack-plugin": "4.5.0",
-    "json-server": "^0.16.3",
+    "file-loader": "^6.2.0",
+    "html-critical-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
-    "style-loader": "2.0.0",
+    "sass-loader": "^10.1.0",
+    "script-ext-html-webpack-plugin": "^2.1.5",
+    "serve": "^11.3.2",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
-    "webpack": "5.10.0",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "browserslist": [
     ">0.2%",
