--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
