--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/runtime": "^7.12.5",
+    "@fullhuman/postcss-purgecss": "^4.0.2",
     "@hot-loader/react-dom": "^17.0.0+4.13.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
@@ -57,6 +59,7 @@
     "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.10.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
